--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"express": "^4.14.0",
 		"helmet": "^3.1.0",
 		"mocha": "^3.2.0",
+		"mongodb-memory-server": "^8.4.0",
 		"mongoose": "^6.2.4",
 		"node-fetch": "^3.2.1",
 		"nodemon": "^2.0.15"
